--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-pineapple",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "description": "Open source twitter script to allow a user to export their followers easily.",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "asciiart-logo": "^0.2.6",
     "dotenv": "^8.2.0",
     "inquirer": "^7.2.0",
+    "progress": "^2.0.3",
     "sqlite3": "^4.2.0",
     "twit": "^2.2.11"
   }
