--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Open source twitter script to allow a user to export their followers easily.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./index.js"
   },
   "repository": {
     "type": "git",
