Add Handlebars Foundation

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-pineapple",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "description": "Open source twitter script to allow a user to export their followers easily.",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "ansi-colors": "^4.1.1",
     "asciiart-logo": "^0.2.6",
     "dotenv": "^8.2.0",
+    "handlebars": "^4.7.6",
     "inquirer": "^7.2.0",
     "progress": "^2.0.3",
     "sqlite3": "^4.2.0",
