--- a/emailwebapp/package.json
+++ b/emailwebapp/package.json
@@ -8,7 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.20",
+    "oauth-1.0a": "^2.2.6",
+    "query-string": "^6.13.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
