--- a/emailwebapp/package.json
+++ b/emailwebapp/package.json
@@ -19,6 +19,7 @@
     "oauth-1.0a": "^2.2.6",
     "query-string": "^6.13.1",
     "vue": "^2.6.11",
+    "vue-cookies": "^1.7.0",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
